--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -1,7 +1,7 @@
 <h1>写真投稿</h1>
-  <%= form_with model: @post_image do |f| %>
+  <%= form_with model: @post do |f| %>
     <h4>写真を選択</h4>
-      <%= f.file_field :image, accept: "image/*" %>
+      <%= f.file_field :post_image, accept: "image/*" %>
     <h4>撮影場所</h4>
       <%= f.text_field :location %>
     <h4>説明文</h4>
