--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -1,7 +1,8 @@
 <% @post.each do |post| %>
+
 <div>
   <%= image_tag post.get_image %>
-  <p>投稿写真：<%= image_tag 'sample-author1.jpg' %></p>
+  <p>投稿写真：<%= image_tag '月山.jpg' %></p>
   <p>撮影場所名：<%= post.location %></p>
   <p>説明文：<%= post.body %></p>
   <p>ユーザーネーム：<%= post.user.name %></p>
