--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -1,7 +1,13 @@
-<% @post.each do |post| %>
+<p>写真にいいね&コメントをしよう！！</p>
+<p>ここではユーザの投稿を閲覧できます。</p>
+
+<% @posts.each do |post| %>
 
 <div>
+ <%= link_to post_path(post.id) do %>
   <%= image_tag post.get_image %>
+ <% end %>
+
   <p>投稿写真：<%= image_tag '月山.jpg' %></p>
   <p>撮影場所名：<%= post.location %></p>
   <p>説明文：<%= post.body %></p>
