--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,2 +1,13 @@
-<h1>User::Posts#show</h1>
-<p>Find me in app/views/user/posts/show.html.erb</p>
+<h1>投稿詳細</h1>
+<div>
+  <%= image_tag @post.get_image %>
+  <p>撮影場所：<%= @post.location %></p>
+  <p>説明文：<%= @post.body %></p>
+  <p>投稿ユーザー画像：<%= image_tag 'sample-author1.jpg' %>
+  <p>ユーザーネーム：<%= @post.user.name %></p>
+  <p>投稿日：<%= @post.created_at.strftime('%Y/%m/%d') %></p>
+  
+  <% if @post.user == current_user %>
+    <%= link_to "削除", post_path(@post), method: :delete %>
+  <% end %>
+</div>
