--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
         <%= link_to "写真投稿", new_post_path %>
        </li>
        <li>
+      <%= link_to 'マイページ', user_path(current_user.id) %>    </li>
+       <li>
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
        </li>
       <% else %>
