--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -8,7 +8,8 @@
   <%= image_tag post.get_image %>
  <% end %>
 
-  <p>投稿写真：<%= image_tag '月山.jpg' %></p>
+
+  <p>投稿写真：<%= image_tag post.user.get_profile_image(100,100) %></p>
   <p>撮影場所名：<%= post.location %></p>
   <p>説明文：<%= post.body %></p>
   <p>ユーザーネーム：<%= post.user.name %></p>
