--- a/app/views/user/posts/_list.html.erb
+++ b/app/views/user/posts/_list.html.erb
@@ -1,14 +1,27 @@
+<div class="card-list-container py-5">
 <% posts.each do |post| %>
-<div>
+ <div class="card w-50 mx-auto mt-4 shadow-lg">
   <%= link_to post_path(post.id) do %>
-    <%= image_tag post.get_image %>
+    <%= image_tag post.get_image, class:"card-img-top"; %>
   <% end %>
-  <p>投稿写真：<%= image_tag post.user.get_profile_image(100,100) %></p>
-  <p>撮影場所：<%= post.location %></p>
-  <p>説明文：<%= post.body %></p>
-  <p>ユーザーネーム：<%= post.user.name %></p>
-  <p><%= link_to "#{post.post_comments.count} コメント", post_path(post.id) %></p>
+  <div class="card-body">
+   <div class="row">
+    <div class="col-2">
+     <%= image_tag post.user.get_profile_image(100,100), class:"mt-3 rounded-circle"; %>
+    </div>
+    <div class="col-10">
+     <p class="card-title">
+      <%= link_to(post_path(post.id), class:"text-dark") do %>
+       <strong><i class="far fa-flag"></i><span> <%= post.location %></span></strong>
+      <% end %>
+     </p>
+     <p class="card-text">説明文：<%= post.body %></p>
+     <span><i class="fas fa-user"></i> By <%= post.user.name %> ｜ </span>
+     <span><%= link_to "#{post.post_comments.count} コメント", post_path(post.id), class:"text-dark" %></span>
+    </div>
+   </div>
+  </div>
+ </div>
+ <% end %>
+ <%= paginate posts %>
 </div>
-<% end %>
-
-<%= paginate posts %>
