--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -1,20 +1,32 @@
-<h1>写真投稿</h1>
-
-<% if @post.errors.any? %>
-  <%= @post.errors.count %>件のエラーが発生しました
-  <ul>
-    <% @post.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
+<div class="container">
+ <div class="row no-gutters">
+  <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
+   <h5 class="text-dark bg-light p-4 mb-0">写真投稿</h5>
+   <div class="form-body p-4">
+    <% if @post.errors.any? %>
+     <ul class="alert alert-danger" role="alert">
+      <h6 class="alert-heading">
+       <%= @post.errors.count %>件のエラーが発生しました
+      </h6>
+       <% @post.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+       <% end %>
+     </ul>
     <% end %>
-  </ul>
-<% end %>
+    <%= form_with model: @post do |f| %>
+     <%= f.file_field :post_image, accept: "image/*", class: "w-100" %>
+     <div class="input-group mb-3 mt-4">
+      <div class="input-group-prepend">
+       <span class="input-group-text" aria-hidden="true"><i class="fas fa-building"></i></span>
+      </div>
+      <%= f.text_field :location, class:"form-control", placeholder:"撮影場所" %>
+     </div>
+     <%= f.text_area :body, class:"form-control", rows:"3", placeholder:"コメントここに" %>
+     <hr>
+     <%= f.submit '投稿', class:"btn btn-lg btn-block btn-info mt-4" %>
+    <% end %>
+   </div>
+  </div>
+ </div>
+</div>
 
-  <%= form_with model: @post do |f| %>
-    <h4>写真を選択</h4>
-      <%= f.file_field :image, accept: "image/*" %>
-    <h4>撮影場所</h4>
-      <%= f.text_field :location %>
-    <h4>説明文</h4>
-      <%= f.text_area :body %>
-    <%= f.submit '投稿' %>
-  <% end %>
