--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,6 +1,6 @@
 <h1>投稿詳細</h1>
 <div>
-  <%= image_tag @post.get_image %>
+  <%= image_tag @post.post_image %>
   <p>撮影場所：<%= @post.location %></p>
   <p>説明文：<%= @post.body %></p>
   <p>投稿ユーザー画像：<%= image_tag @post.user.get_profile_image(100,100) %></p>
@@ -13,13 +13,13 @@
 
   <% if @post.favorited_by?(current_user) %>
     <p>
-      <%= link_to post_favorites_path(@post), method: :delete do %>
+      <%= link_to favorites_path(@post), method: :delete do %>
         ♥<%= @post.favorites.count %> いいね
       <% end %>
     </p>
     <% else %>
     <p>
-      <%= link_to post_favorites_path(@post), method: :post do %>
+      <%= link_to favorites_path(@post), method: :post do %>
         ♡<%= @post.favorites.count %> いいね
       <% end %>
     </p>
@@ -39,7 +39,7 @@
   <% end %>
 </div>
 <div>
-  <%= form_with model: [@post, @post_comment] do |f| %>
+  <%= form_with(model:[@post, @post_comment]) do |f| %>
     <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
     <%= f.submit "送信する" %>
   <% end %>
