--- a/app/views/user/posts/_search.html.erb
+++ b/app/views/user/posts/_search.html.erb
@@ -1,6 +1,6 @@
- <h2>検索結果 "<%= @keyword %>"</h2>
+ <h2>検索結果</h2>
   <ul>
-    <% @posts.each do |post| %>
+    <% @results.each do |post| %>
       <li>
         <%= link_to post_path(post.id) do %>
           <%= image_tag post.image.variant(gravity: :center, resize:"640x640^", crop:"640x640+0+0"), if post.image.attached? %>
