--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,10 @@
         <ul class="navbar-nav ml-auto">
 
 
+          <%= form_with url: posts_path, method: :get, local: true do |f| %>
+          <%= f.text_field :q, placeholder: "気になるワードを入力", value: "" %>
+          <%= f.submit "検索", name: nil %>
+          <% end %>
 
         <% if user_signed_in? %>
         <li class="nav-item">
