--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -3,7 +3,7 @@
   <%= image_tag @post.post_image %>
   <p>撮影場所：<%= @post.location %></p>
   <p>説明文：<%= @post.body %></p>
-  <p>投稿ユーザー画像：<%= image_tag @post.user.get_profile_image(100,100) %></p>
+  <p>プロフィール画像：<%= image_tag @post.user.get_profile_image(100,100) %></p>
   <p>ユーザーネーム：<%= @post.user.name %></p>
   <p>投稿日：<%= @post.created_at.strftime('%Y/%m/%d') %></p>
 
@@ -34,12 +34,12 @@
     <%= post_comment.user.name %>
     <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
     <% if post_comment.user == current_user %>
-      <%= link_to "削除", post_post_comment_path(post_comment.post, post_comment), method: :delete %>
+      <%= link_to "削除", postpost_comment_path(post_comment.post, post_comment), method: :delete %>
     <% end %>
   <% end %>
 </div>
 <div>
-  <%= form_with(model:[@post, @post_comment]) do |f| %>
+  <%= form_with model:[@post, @post_comment] do |f| %>
     <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
     <%= f.submit "送信する" %>
   <% end %>
