--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,6 +1,5 @@
-<section class="inner">
-  <h2 class="section-ttl">管理者トップ</h2>
-  <h1 class="admin_top-txt">
-   
-   </h1>
-  </section>
+<div class="container">
+    <div class="text-white bg-secondary d-flex align-items-center justify-content-center" style="height:300px;">
+      <h1>管理者画面</h1>
+    </div>
+  </div>
