--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,7 +1,7 @@
 <section class="inner">
-	<h2 class="section-ttl"><%= @user.first_name %> <%= @user.name %> さんの会員情報編集</h2>
+	<h2 class="section-ttl"><%= @user.name %> さんの会員情報編集</h2>
 	<%= form_with model:@user, url: admin_user_path(@user) do |f| %>
-		<%= render 'layouts/error_messages', resource: @user %>
+		
 		<table class="customer_info customer_form">
 			<thead>
 				<th></th>
