--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -23,7 +23,7 @@
 				<td>会員ステータス</td>
 				<td colspan="2">
 					<% if @user.is_active? %>
-						<span class="text-active">有効	</span>					
+						<span class="text-active">有効	</span>
 					<% else %>
 						<span class="text-invalid">退会済み</span>
 					<% end %>
@@ -31,9 +31,9 @@
 			</tr>
 			<tr>
 				<td><%= link_to "編集", edit_admin_user_path(@user), class: "btn btn-success" %></td>
-				<td><%= link_to "投稿履歴一覧を見る", admin_user_postss_path(@user), class: "btn btn-primary" %></td>
+				<td><%= link_to "投稿履歴一覧を見る", user_path(@user), class: "btn btn-primary" %></td>
 			</tr>
 		</tbody>
 	</table>
-	
+
 </section>
