--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,1 +1,26 @@
-<h1>トップページ</h1>
+<!DOCTYPE html>
+<html lang="ja">
+  <meta charset="UTF-8" />
+   <link rel="stylesheets" href="../stylesheets/application" />
+
+
+<body>
+<div class="container my-5">
+ <div class="row">
+  <div class="main-visual-text">
+  <p>ようこそ、<big><big><font color="orange">SoKoDoKoPHoTo</font></big></big>へ!<br></p>
+
+  <%= image_tag 'mv.jpg', size: '1150x600' %>
+
+		<p>
+		 このサイトは、写真投稿サイトになります。<br>
+		 会員でない方も写真の閲覧はできますが、<br>
+		 写真投稿には<u>会員登録</u>が必要になります。
+		</p>
+	 </div>
+	</div>
+ </div>
+</div>
+
+</body>
+</html>
