[Add]タグ投稿機能を追加

--- a/app/views/user/posts/edit.html.erb
+++ b/app/views/user/posts/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>User::Posts#edit</h1>
-<p>Find me in app/views/user/posts/edit.html.erb</p>
+<%= f.text_field :tag_ids,value: @tag_list,\
+    placeholder: "タグをつける。複数つけるには','で区切ってください。" %>
