--- a/app/views/user/posts/_search_post.html.erb
+++ b/app/views/user/posts/_search_post.html.erb
@@ -1,8 +1,8 @@
 <div class="card-list-container py-5">
-<% posts.each do |post| %>
+ <% @posts.each do |post| %>
  <div class="card w-50 mx-auto mt-4 shadow-lg">
-  <%= link_to post_path(post.id) do %>
-    <%= image_tag post.get_image, class:"card-img-top"; %>
+  <%= link_to user_path(post.user.id) do %>
+   <%= image_tag post.get_image, class:"card-img-top"; %>
   <% end %>
   <div class="card-body">
    <div class="row">
@@ -16,16 +16,16 @@
       <% end %>
      </p>
      <p class="card-text">説明文：<%= post.body %></p>
+
+     <span><%= link_to post.tag, search_post_path(keyword: post.tag) %></span>
+
      <span><i class="fas fa-user"></i> By <%= post.user.name %> ｜ </span>
      <span><%= link_to "#{post.post_comments.count} コメント", post_path(post.id), class:"text-dark" %></span>
-     
+
      <td><%= post.tag %></td>
-     
+
     </div>
    </div>
   </div>
  </div>
- <% end %>
-
- <%= paginate posts %>
 </div>
