[Fix]いいねができない箇所を修正

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,5 +1,6 @@
+
 <section class="inner">
-	<h2 class="section-ttl">会員一覧</h2>
+	<h2>会員一覧</h2>
 	<%= render 'index', users: @users %>
 	<%= paginate @users %>
 </section>
