--- a/app/views/user/posts/search_post.html.erb
+++ b/app/views/user/posts/search_post.html.erb
@@ -22,10 +22,9 @@
      <span><i class="fas fa-user"></i> By <%= post.user.name %> ｜ </span>
      <span><%= link_to "#{post.post_comments.count} コメント", post_path(post.id), class:"text-dark" %></span>
 
-     <td><%= post.tag %></td>
-
     </div>
    </div>
   </div>
  </div>
 </div>
+<% end %>
