--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -3,4 +3,4 @@
 <p>写真にいいね&コメントをしよう！！</p>
 <p>ここではユーザの投稿を閲覧できます。</p>
 
-<%= render 'list', posts: @posts %>
+<%= render 'user/posts/list', posts: @posts %>
