--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -34,13 +34,13 @@
 
 <div>
   <p>コメント件数：<%= @post.post_comments.count %></p>
-  <% @post.post_comments.each do |post_comment| %>
-    <p><%= image_tag post_comment.user.get_profile_image(100,100) %></p>
-    <%= post_comment.user.name %>
-    <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
-    <% if post_comment.user == current_user %>
-      <%= link_to "削除", postpost_comment_path(post_comment.post, post_comment), method: :delete %>
-    <% end %>
+  <% @post_comments.each do |post_comment| %>
+   <tr>
+    <td><%= image_tag post_comment.user.get_profile_image(100,100) %></td>
+    <td><%= post_comment.user.name %></td>
+    <td><%= post_comment.comment %></td>
+    <td><%= link_to "削除", post_comment_path(@post, post_comment), method: :delete %></td>
+   </tr>
   <% end %>
 </div>
 <div>
