--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -4,7 +4,7 @@
   <%= image_tag @post.post_image, size: '320x240' %>
   <p>撮影場所：<%= @post.location %></p>
   <p>説明文：<%= @post.body %></p>
-  <p>プロフィール画像：<%= image_tag @post.user.get_profile_image(100,100) %></p>
+  <p>プロフィール画像：<%= image_tag @post.user.get_profile_image(100,100), class: "rounded-circle" %></p>
   <p>ユーザーネーム：<%= @post.user.name %></p>
   <p>投稿日：<%= @post.created_at.strftime('%Y/%m/%d') %></p>
 
@@ -13,7 +13,7 @@
 
 
   <% if @post.user == current_user %>
-    <%= link_to "削除", post_path(@post), method: :delete %>
+    <%= link_to "投稿削除", post_path(@post), method: :delete %>
   <% end %>
 
   <% if @post.favorited?(current_user) %>
@@ -36,17 +36,21 @@
   <p>コメント件数：<%= @post.post_comments.count %></p>
   <% @post_comments.each do |post_comment| %>
    <tr>
-    <td><%= image_tag post_comment.user.get_profile_image(100,100) %></td>
+    <td><%= image_tag post_comment.user.get_profile_image(50,50), class: "rounded-circle" %></td>
     <td><%= post_comment.user.name %></td>
+    <div class="balloon1-left">
     <td><%= post_comment.comment %></td>
-    <td><%= link_to "削除", post_comment_path(@post, post_comment), method: :delete %></td>
+    </div>
+    <% if user_signed_in? && post_comment.user_id == current_user.id %>
+    <td><%= link_to "削除", post_post_comment_path(@post, post_comment), method: :delete %></td>
+    <% end %>
    </tr>
   <% end %>
 </div>
 <div>
   <%= form_with model:[@post, @post_comment] do |f| %>
-    <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
-    <%= f.submit "送信する" %>
+    <%= f.text_area :comment, :size=>"50x5", placeholder: "コメントをここに" %>
+    <p><%= f.submit "送信する", class:"btn btn-info mt-5" %></p>
   <% end %>
 </div>
 </div>
