--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -4,23 +4,23 @@
    <link rel="stylesheets" href="../stylesheets/application" />
 
 
-<body>
-<div class="container my-5">
- <div class="row">
-  <div class="main-visual-text">
-  <p>ようこそ、<big><big><font color="orange">SoKoDoKoPHoTo</font></big></big>へ!<br></p>
+ <body>
+  <div class="container my-5">
+   <div class="row">
+    <div class="main-visual-text">
+    <p>ようこそ、<big><big><font color="orange">SoKoDoKoPHoTo</font></big></big>へ!<br></p>
+    
+     <%= image_tag 'mv.jpg', size: '950x600' %>
 
-  <%= image_tag 'mv.jpg', size: '1150x600' %>
+	<p>
+     このサイトは、写真投稿サイトになります。<br>
+	 会員でない方も写真の閲覧はできますが、<br>
+	 写真投稿には<u><font color="orange">会員登録</font></u>が必要になります。
+	</p>
+		
+    </div>
+   </div>
+  </div>
 
-		<p>
-		 このサイトは、写真投稿サイトになります。<br>
-		 会員でない方も写真の閲覧はできますが、<br>
-		 写真投稿には<u>会員登録</u>が必要になります。
-		</p>
-	 </div>
-	</div>
- </div>
-</div>
-
-</body>
+ </body>
 </html>
