--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -3,6 +3,7 @@
 
   <% if @user.id === current_user.id %>
   <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+  <p><%= link_to "いいねした投稿", favorites_user_path(@user) %></p>
   <% end %>
   
 </div>
