--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,11 +1,16 @@
 <div>
   <h3><%= @user.name %></h3>
 
-  <% if @user.id === current_user.id %>
+  <% if admin_signed_in? && @user.id === current_admin.id %>
   <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
   <p><%= link_to "いいねした投稿", favorites_user_path(@user) %></p>
   <% end %>
   
+
+  <% if user_signed_in? && @user.id === current_user.id %>
+  <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+  <p><%= link_to "いいねした投稿", favorites_user_path(@user) %></p>
+  <% end %>
 </div>
 
 
