[Add]config.hosts追加

--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -11,12 +11,13 @@
     <p>ようこそ、<big><big><font color="orange">SoKoDoKoPHoTo</font></big></big>へ!<br></p>
     
      <%= image_tag 'mv.jpg', size: '950x600' %>
-
-	<p>
-     このサイトは、写真投稿サイトになります。<br>
-	 会員でない方も写真の閲覧はできますが、<br>
-	 写真投稿には<u><font color="orange">会員登録</font></u>が必要になります。
-	</p>
+     
+     <p>
+      世界に広めたい風景を投稿できるコミュニティサイト。<br>
+      地元の人だけにしか分からないような秘境の風景だったり、<br>
+      おすすめの観光スポットを共有し合うサイトです。<br>
+      写真投稿&閲覧には<u><font color="orange">会員登録</font></u>が必要になります。
+     </p>
 		
     </div>
    </div>
