--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -21,9 +21,9 @@
       </div>
       <%= f.text_field :location, class:"form-control", placeholder:"撮影場所" %>
      </div>
-     <%= f.text_area :body, class:"form-control", rows:"3", placeholder:"コメントここに" %>
+     <%= f.text_area :body, class:"form-control", rows:"3", placeholder:"コメントはここに" %>
      
-     <%= f.text_field :tag, class: "form-control", placeholder: "ひとつだけタグをつけられます" %>
+     <%= f.text_field :tag, class: "form-control", placeholder: "ひとつだけタグをつけられます。 例 #海" %>
      
      <hr>
      <%= f.submit '投稿', class:"btn btn-lg btn-block btn-info mt-4" %>
