--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
           <%= f.text_field :q, placeholder: "気になるワードを入力", value: "" %>
           <%= f.submit "検索", name: nil %>
          <% end %>
+          <li class="nav-item"><%= link_to "投稿一覧", posts_path, class: 'nav-link text-dark' %></li>
           <li class="nav-item"><%= link_to "写真投稿", new_post_path, class: 'nav-link text-dark' %></li>
           <li class="nav-item"><%= link_to 'マイページ', user_path(current_user.id), class: 'nav-link text-dark' %></li>
           <li class="nav-item"><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %></li>
